--- a/CSS JS/customstyle.css
+++ b/CSS JS/customstyle.css
@@ -31,7 +31,7 @@ input.transparent-input{
     
     margin-left: 48%;
  }
- .customcenter1{
+ /* .customcenter1{
     margin-left: 23%;
 
- }
+ } */
